--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>maind.github.io</title>
+	<title>manid.github.io</title>
 </head>
 <body>
 	<h1>manid.github.io</h1>
